[package]
name = "hts_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
envconfig = "0.10.0"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
async-std = { version = "1.10", features = ["attributes"] }
chrono = "0.4"
rinfluxdb-lineprotocol = { version = "0.2.0", features = ["client"] }
rinfluxdb-influxql = { version = "0.2.0", features = ["client"] }
mockall = "0.10" 
scopeguard = "1.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockall = "0.10" 

[package.metadata]
test = true

[build-dependencies]
dotenv = "0.15"