[package]
name = "hts_connector"
version = "0.1.0"
authors = ["@mulmuri"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Goboolean/hts-connector"
keywords = ["goboolean", "quant", "rust"]
categories = ["goboolean", "quant"]
description = "A connector that fetches data from the HTS service and dumps it into InfluxDB"

[dependencies]
async-std = "1.12.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
envconfig = "0.10.0"
influxdb = "0.7.2"
log = "0.4.21"
mockall = "0.12.1"
rinfluxdb-influxql = "0.2.0"
rinfluxdb-lineprotocol = "0.2.0"
scopeguard = "1.2.0"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
dotenv = "0.15"
